feat: 스티커 생성(임시), 일기장 커버에 추가/수정/삭제 api 구현